--- a/Playground/Playground/MainWindow.xaml
+++ b/Playground/Playground/MainWindow.xaml
@@ -1,27 +1,27 @@
-﻿<Controls:MetroWindow x:Class="Playground.MainWindow"
+﻿<Window x:Class="Playground.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:windows="clr-namespace:SoftFluent.Windows;assembly=SoftFluent.Windows"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Playground"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" Loaded="MetroWindow_Loaded">
     <Grid>
-        <Grid.Resources>
-            <local:Model x:Key="model"/>
-        </Grid.Resources>
-        <DockPanel>
-            <Controls:MetroAnimatedSingleRowTabControl x:Name="ParameterTabControl"  DockPanel.Dock="Top" Margin="10 5 5 5" Height="259">
-                <TabItem  Header="pg1" >
-                    <windows:PropertyGrid x:Name="pg1" Grid.Column="0"  ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Hidden" />
-                </TabItem>
-                <TabItem Header="pg2" >
-                    <windows:PropertyGrid x:Name="pg2" Grid.Column="0"  ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Hidden" />
-                </TabItem>
-            </Controls:MetroAnimatedSingleRowTabControl>
-            <Button Click="Button_Click">Change</Button>
-        </DockPanel>
+        <Grid Margin="10">
+            <StackPanel Orientation="Vertical">
+                <DockPanel LastChildFill="True" Margin="10 5 10 5">
+                    <TextBlock  Text="TImax" VerticalAlignment="Center"/>
+                </DockPanel>
+                <Button Content="生成数据" Click="Button_Click"/>
+
+                <DataGrid x:Name="dgTI" DockPanel.Dock="Top" AutoGenerateColumns="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="序号" Binding="{Binding Path=ID}"  Width="80"  CanUserSort="False" CanUserResize="False"/>
+                        <DataGridTextColumn Header="TI" Binding="{Binding Path=Value}" Width="100"  CanUserSort="False" CanUserResize="False"/>
+                        <DataGridTextColumn Header="符号" Binding="{Binding Path=sign}" Width="100" CanUserSort="False" CanUserResize="False"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </StackPanel>
+        </Grid>
     </Grid>
-</Controls:MetroWindow>
+</Window>
